add tuto5 to index.html

--- a/index.html
+++ b/index.html
@@ -69,8 +69,6 @@
 
           </div>
           <br>
-          <!--<div class="swiper-button-next"></div>-->
-          <!--<div class="swiper-button-prev"></div>-->
           <div class="swiper-pagination"></div>
         </div>
 
@@ -78,7 +76,7 @@
         <div id="btnLoadingAndProgressBarContainer">
 
           <!--Este mensaje aparecera despues de los sliders o cuando inicie por segunda vez-->
-          <h1 id="userMessage">Concentrate al máximo, y enfrenta esta aventura.</h1>
+          <img src="assets/tuto5.png" alt="" id="userMessage">
 
           <button id="btn-loading" style="display: none;">COMENZAR</button>
 
